# StageEditor

./: .gitignore  CMakeLists.txt  README.md  build.bat  vcpkg.json
include/: Config.h  VulkanContext.h  gui.h
src/: fragment.glsl  main.cpp  vertex.glsl
src/shaders/: vertex.vert
